<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Holliston High</string>
    <string name="action_refresh">Refresh data</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Schedules</item>
        <item>News</item>
        <item>Daily Announcements</item>
        <item>Events</item>
        <item>Lunch Menus</item>
        <item>Social Media</item>
        <item>HHS Website</item>
        <item>Refresh</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_hhs</item>
        <item>@drawable/ic_schedules</item>
        <item>@drawable/ic_news</item>
        <item>@drawable/ic_announcements</item>
        <item>@drawable/ic_events</item>
        <item>@drawable/ic_lunch</item>
        <item>@drawable/ic_like</item>
        <item>@drawable/panther</item>
        <item>@drawable/ic_refresh</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="xml_error">Error with data download</string>
    <string name="all_day">All day</string>
    <string name="disclosure_icon">More</string>
    <string name="downloading">Downloading…</string>
    <string name="no_lunch">No lunch menu posted</string>
    <string name="news_highlight_image">News Highlight Photo</string>
    <string name="widget_header">HHS Schedule</string>
    <string name="school_street_sign">HHS Street Sign</string>

    <!-- Feed URLs -->
    <string name="schedules_url">https://www.googleapis.com/calendar/v3/calendars/sulsp2f8e4npqtmdp469o8tmro%40group.calendar.google.com/events?key=AIzaSyAQa5V8a141kmmGrcb2LgpmyTvocrVPiDI&amp;maxResults=30&amp;orderBy=startTime&amp;singleEvents=true</string>
    <string name="news_url">https://sites.google.com/a/holliston.k12.ma.us/holliston-high-school/general-info/news/posts.xml</string>
    <string name="events_url">https://www.googleapis.com/calendar/v3/calendars/holliston.k12.ma.us_gsfpbqnefkm59ul6gbofte1s2k%40group.calendar.google.com/events?key=AIzaSyAQa5V8a141kmmGrcb2LgpmyTvocrVPiDI&amp;maxResults=30&amp;orderBy=startTime&amp;singleEvents=true</string>
    <string name="dailyann_url">https://sites.google.com/a/holliston.k12.ma.us/holliston-high-school/general-info/daily-announcements/posts.xml</string>
    <string name="lunch_url">https://www.googleapis.com/calendar/v3/calendars/holliston.k12.ma.us_c2d4uic3gbsg7r9vv9qo8a949g@group.calendar.google.com/events?key=AIzaSyAQa5V8a141kmmGrcb2LgpmyTvocrVPiDI&amp;maxResults=30&amp;orderBy=startTime&amp;singleEvents=true</string>
    <string name="client_id">175331434418-fuam67euqr6eegii9ho3t229kso2gir9.apps.googleusercontent.com</string>
    <string name="api_key">AIzaSyDXY9OA9csrexFK1WFCeTd4jNIjCgyO_Nw</string>

    <!-- Layout Strings -->
    <string name="schedule_title_single">Schedule</string>
    <string name="schedule_title_plural">Schedules</string>
    <string name="schedule_next">Next Schedule</string>
    <string name="daily_ann_title">Daily Announcements</string>
    <string name="news_title">News</string>
    <string name="event_title_plural">Upcoming Events</string>
    <string name="lunch_title_single">Lunch Menu</string>
    <string name="lunch_title_plural">Lunch Menus</string>
    <string name="social_title">Social Media</string>
    <string name="please_refresh">Please connect to a network and choose Refresh from the menu.</string>
    <string name="events_no_details">No additional details posted for this event.</string>

    <!-- Link Labels -->
    <string name="hhs_facebook_label">on Facebook</string>
    <string name="hhs_twitter_label">on Twitter</string>
    <string name="hhs_googleplus_label">on Google+</string>
    <string name="hhs_instagram">on Instagram</string>
    <string name="hhs_youtube">on YouTube</string>
    <string name="hhs_home_page">http://hhs.holliston.k12.ma.us</string>

    <!-- Link strings -->
    <string name="hhs_facebook_id">HollistonHigh</string>
    <string name="hhs_twitter_id">HollistonHigh</string>
    <string name="hhs_googleplus_id">109673162050529249669</string>
    <string name="hhs_instagram_id">hollistonhigh</string>
    <string name="hhs_youtube_id">UCnDicx0qt2xP1t7O7NpbNOg</string>

    <!-- Parser element names -->
    <string-array name="schedules_parser_names">
        <item/>
        <item>summary</item>
        <item>htmlLink</item>
        <item>start</item>
        <item/>
        <item>description</item>
        <item>id</item>
    </string-array>
    <string-array name="events_parser_names">
        <item/>
        <item>summary</item>
        <item>htmlLink</item>
        <item>start</item>
        <item/>
        <item>description</item>
        <item>id</item>
    </string-array>
    <string-array name="news_parser_names">
        <item>entry</item>
        <item>title</item>
        <item>link</item>
        <item>updated</item>
        <item/>
        <item>content</item>
        <item>id</item>
    </string-array>
    <string-array name="dailyann_parser_names">
        <item>entry</item>
        <item>title</item>
        <item>link</item>
        <item>published</item>
        <item/>
        <item>content</item>
        <item>id</item>
    </string-array>
    <string-array name="lunch_parser_names">
        <item/>
        <item>summary</item>
        <item>htmlLink</item>
        <item>start</item>
        <item/>
        <item>description</item>
        <item>id</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
